# mmck-vectors

./: .travis.yml  Makefile.am  NEWS  README  README.md  configure.ac  gdbinit
doc/: macros.texi  mmck-vectors.texi
lib/: config.scm.in  mmck.vectors.assertions.scm  mmck.vectors.core.scm  mmck.vectors.scm  mmck.vectors.version.scm
meta/autoconf/: mmux-split-version.m4
meta/automake/: mmck-rules.make
meta/travis-ci/: install-chicken-egg-matchable.sh  install-mmck-checks.sh  install-mmck-exceptional-conditions.sh  install-mmck-lang.sh
tests/: test-vectors-core.scm  test-version.scm
